fix: update clientele header style to enhance visibility

--- a/forge_fast.css
+++ b/forge_fast.css
@@ -469,6 +469,7 @@ nav li a .nav-opacity {
 .clientele-header {
   color: #df6437;
   text-align: center;
+  font-weight: 600;
 }
 
 .swiper-wrapper {
